# buckup

./: .gitignore  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  PKGBUILD  README.md  README.rst  buckup.spec  ruff.toml  run.py  setup.cfg  setup.py
.github/workflows/: ci.yml
buckup/: __init__.py  bucket_creator.py  command_line.py  exceptions.py  utils.py
mkbucket/: command_line.py
