[metadata]
name = buckup
version = 0.1a0
description = Create S3 buckets in seconds from your command line to use on your website.
long-description = file: README.rst
author = Torchbox
author_email = info@torchbox.com
maintainer = Tomasz Knapik
maintainer_email = tomasz.knapik@torchbox.com
url = https://github.com/torchbox/buckup
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved
    License :: OSI Approved :: BSD License
keywords =
    aws
    s3
    bucket
    buckets

[options]
packages = find:
install_requires =
    boto3>=1.7,<1.8

[bdist_wheel]
python-tag = py3

[isort]
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
