[metadata]
name = buckup
version = 0.1a1
description = Create S3 buckets in seconds from your command line to use on your website.
long-description = file: README.rst
maintainer = Torchbox
maintainer_email = info@torchbox.com
author = Tomasz Knapik
author_email = tomasz.knapik@torchbox.com
url = https://github.com/torchbox/buckup
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved
    License :: OSI Approved :: BSD License
    Development Status :: 3 - Alpha
    Environment :: Console
    Topic :: Utilities
    Topic :: System :: Systems Administration
    Programming Language :: Python :: 3 :: Only
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Operating System :: OS Independent
    Natural Language :: English
keywords =
    aws
    s3
    bucket
    storage
    cloud

[options]
packages = find:
install_requires =
    boto3>=1.7,<1.8
python_requires = >=3.4

[isort]
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
